--- a/app/views/home/bar_chart.html.erb
+++ b/app/views/home/bar_chart.html.erb
@@ -5,7 +5,7 @@
   <div class="view view-cascade gradient-card-header blue-gradient">
 
     <!-- Title -->
-    <h2 class="card-header-title mb-3">勃起功能障碍与吸烟频度的关系</h2>
+    <h2 class="card-header-title mb-3">肺癌与吸烟频度的关系</h2>
     <!-- Text -->
     <p class="mb-0"><i class="fa fa-calendar mr-2"></i>统计于2018.10.11</p>
 
